Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriTextRetTextObj.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        text two = "green"
        Yoda<Text, text, Text> yoda
        Text ret = yoda:useForce(one, two)
        output "passed"
     end
end
