Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjTextRetTextObjFail.quorum
class Main
    action Main
        text one = "green"
        Text two
        two:SetValue("green")
        Yoda<text, Text, Text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
